--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="nuwZullandApp">
+
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+    <script data-require="jquery@*" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script>
+      var nuwZullandApp = angular.module('nuwZullandApp', []);
+
+      nuwZullandApp.filter('nuwzullandize', function(){
+        return function(text) {
+             return text ? text.replace(/[aeiou]/gi, 'u') : '';
+        };
+      });
+  </script>
   </head>
+
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <input type="text" ng-model="boringText" value="" />
+    <h2>{{boringText | nuwzullandize}}</h2>
   </body>
+
 </html>
