--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <html ng-app="nuwZullandApp">
 
   <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <script>
       var nuwZullandApp = angular.module('nuwZullandApp', []);
